--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   carousel_slider: ^4.2.1
+  page_transition: ^2.1.0
 
 dev_dependencies:
   flutter_test:
