--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   page_transition: ^2.1.0
   riverpod: ^2.5.1
   flutter_riverpod: ^2.5.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
