--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   riverpod: ^2.5.1
   flutter_riverpod: ^2.5.1
   equatable: ^2.0.5
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
